<resources>
    <string name="powered_by">Powered by</string>
    <string name="username">Username</string>
    <string name="icons_counter" translatable="false">+%1$d</string>
    <string name="password">Password</string>
    <string name="nav_logo">Boresha Afya App</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="action_log_out">Logging Out</string>
    <string name="action_start_sync">Sync Started</string>
    <string name="action_sync_failed">Sync Failed</string>
    <string name="nav_registers">Modules</string>
    <string name="nav_logout_as">Logout as</string>
    <string name="nav_sync">Sync</string>
    <string name="nav_last">"Last: </string>
    <string name="nav_last_sync_time">HH:mm a , MMM DD</string>
    <string name="all_registers">All Registers</string>
    <string name="log_out_as">Log out as</string>
    <string name="device_to_device">Device-to-device sync</string>
    <string name="choose_language">Choose language</string>
    <string name="menu_all_clients">All Clients</string>
    <string name="menu_all_families">All Families</string>
    <string name="menu_anc_clients">ANC Clients</string>
    <string name="menu_child_clients">Child Clients</string>
    <string name="menu_hiv">HIV</string>
    <string name="menu_hts">HTS</string>
    <string name="menu_hps">iCCHW</string>
    <string name="menu_ayp_inschool">AYP In-School Services</string>
    <string name="menu_ayp_outschool">AYP Out-School Services</string>
    <string name="menu_ayp_parental">AYP Parental Services</string>
    <string name="ayp_parental_enrollment">AYP Parental Enrollment</string>
    <string name="menu_hiv_index_contacts">Index Contacts</string>
    <string name="menu_tb">TB</string>
    <string name="menu_anc">ANC</string>
    <string name="menu_pnc">PNC</string>
    <string name="menu_child">Child</string>
    <string name="menu_family_planning">Family Planning</string>
    <string name="menu_ltfu">LTFU</string>
    <string name="menu_hivst">Self Testing</string>
    <string name="menu_malaria">Malaria</string>
    <string name="menu_referrals">Referrals</string>
    <string name="search_name_or_id">Search name or ID</string>
    <string name="visit_not_done">Visit not \ndone</string>
    <string name="visit_done">Visit done</string>
    <string name="record_visit">Record visit</string>
    <string name="due_visit">Last visit \n %1$s</string>
    <string name="record_home_visit">Record \nHome visit</string>
    <string name="family_details">Family details</string>
    <string name="add_new_family_member">Add new family member</string>
    <string name="remove_existing_family_member">Remove existing family member</string>
    <string name="change_family_head">Change family head</string>
    <string name="change_primary_caregiver">Change primary caregiver</string>
    <string name="care_giver">Caregiver</string>
    <string name="allow_calls_denied">Kindly allow calls to be made here</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied_phone_number">PhoneNumber copied to clipboard</string>
    <string name="call_prompt">CALL %s</string>
    <string name="call_caregiver">Call caregiver</string>
    <string name="caregiver">Caregiver</string>
    <string name="call">Call</string>
    <string name="call_no_number_provided">(no number provided)</string>
    <string name="add_member_title">Add family member</string>
    <string name="add_member_title_question">What kind of family member do you want to add?</string>
    <string name="add_other_family_member">Other family member</string>
    <string name="add_child_under_five">Child under 5 years</string>
    <string name="return_to_all_children">Return to all children</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="no_services_due">No services are due</string>
    <string name="due_details">When a service becomes due for a family member, it will show up here.</string>
    <string name="due_only">Due only</string>
    <string name="care_giver_initials">CG</string>
    <string name="less_than_twenty_four">less than 24 hrs</string>
    <string name="child_register_title">Child Clients</string>
    <string name="minimum_dietary_title">Minimum dietary diversity </string>
    <string name="minimum_question_lebel">Has the child received, in the previous 24 hours, any animal products (e.g. eggs, liver, milk) or fruit?</string>
    <string name="minimum_dietary_choice_1">0 - no animal products or fruit</string>
    <string name="minimum_dietary_choice_2">1 - one animal product OR one fruit</string>
    <string name="minimum_dietary_choice_3">2 - one animal product AND one fruit</string>
    <string name="muac_title">Mid-upper arm circumference (MUAC)</string>
    <string name="muac_question_label">What is the color of the MUAC tape for the child?</string>
    <string name="muac_choice_1">Green</string>
    <string name="muac_choice_2">Yellow</string>
    <string name="muac_choice_3">Red</string>
    <string name="llitn_title">Sleeping under a LLITN</string>
    <string name="ecd_title">Early childhood development (ECD)</string>
    <string name="school_level_none">Not currently attending school or any learning program</string>
    <string name="school_level_early_childhood">Early childhood programme</string>
    <string name="school_level_primary">Primary</string>
    <string name="school_level_lower_secondary">Lower secondary</string>
    <string name="school_level_upper_secondary">Upper secondary</string>
    <string name="school_level_alternative">Alternative learning program</string>
    <string name="school_level_Higher">Higher</string>
    <string name="edu_level_none">None</string>
    <string name="edu_level_primary">Primary</string>
    <string name="edu_level_secondary">Secondary</string>
    <string name="edu_level_post_secondary">Post-secondary</string>
    <string name="remove_this_person">Remove this person</string>
    <string name="mark_as_deceased">Mark as deceased</string>
    <string name="remove_the_mother">Remove the mother</string>
    <string name="registration_info">Registration info</string>
    <string name="anc_registration">ANC Registration</string>
    <string name="malaria_registration">Malaria Confirmation</string>
    <string name="fp_registration">Family planning registration</string>
    <string name="malaria_follow_up">Follow-up Visit</string>
    <string name="malaria_diagnosis">Malaria Diagnosis</string>
    <string name="sick_child_follow_up">Sick child follow-up</string>
    <string name="edit_child_form_title">Edit baby %1$s\'s details</string>
    <string name="remove_child_form_title">Remove Baby %1$s</string>
    <string name="visit_month">%1$s visit done</string>
    <string name="refer_to_facility">Refer to facility</string>
    <string name="updating">Updating....</string>
    <string name="link_to_addo">Link to ADDO</string>
    <string name="growth_and_nutrition">GROWTH AND NUTRITION</string>
    <string name="vitamin_given">When was %1$s given?</string>
    <string name="immunizations">Immunizations (%s)</string>
    <string name="immunizations_count">Immunizations ({0})</string>
    <string name="overdue">Overdue&#160;</string>
    <string name="due">Due&#160;</string>
    <string name="fill_earler_immunization"><![CDATA[<i>Record earlier immunizations</i>]]></string>
    <string name="not_given_with_spaces">&#160;not given&#160;</string>
    <string name="given_on_with_spaces">&#160;given on&#160;</string>
    <string name="when_vaccines_given_text">When were vaccinations done?</string>
    <string name="when_vaccine">When was %s immunization done?</string>
    <string name="llitn_label">Is the woman sleeping under a Long Lasting Insecticide-Treated Net (LLITN)?</string>
    <string name="llitn_label_child">Is the child sleeping under a Long Lasting Insecticide-Treated Net (LLITN)?</string>
    <string name="llitn_info_title">Whether the pregnant woman sleeps under a LLITN</string>
    <string name="llitn_info_text">Malaria is very dangerous for pregnant women. Wherever malaria is common, women should prevent malaria by taking anti-malarial tablets recommended by a trained health worker and by sleeping under an insecticide-treated mosquito net.</string>
    <string name="dev_warning_sign">Developmental warning signs:</string>
    <string name="care_stim_skill">Caregiver stimulation skills:</string>
    <string name="early_learning">Early learning program:</string>
    <string name="observations_illness_episodes"><![CDATA[Observations & Illness - <i>optional</i>]]></string>
    <string name="observations_illness_episodes_medical"><![CDATA[Observations & Illness Episodes]]></string>
    <string name="home_visit">Home Visit</string>
    <string name="visit_exclusive_breastfeeding">Exclusive breastfeeding</string>
    <string name="given">Given</string>
    <string name="provided_on">Provided on %1$s</string>
    <string name="given_on">Given on %1$s</string>
    <string name="not_given">Not given</string>
    <string name="visit_mnp_dose">MNP dose</string>
    <string name="visit_months">months</string>
    <string name="visit_dose">dose</string>
    <string name="visit_pack">pack</string>
    <string name="visit_vitamin_a_dose">Vitamin A dose</string>
    <string name="visit_deworming_dose">Deworming dose</string>
    <string name="exclusive_breastfeeding">Exclusive breastfeeding</string>
    <string name="hf_malaria_follow_up">Malaria follow-up</string>
    <string name="family_planning_ecp_provision">FP ECP Provision</string>
    <string name="family_planning_change">FP method change</string>
    <string name="pregnancy_confirmation">Pregnancy confirmation</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="view_profile">View Profile</string>
    <string name="location_info">Location info</string>
    <string name="hiv_registration">HIV Registration</string>
    <string name="notes_more">More</string>
    <string name="pmtct_registration">PMTCT Registration</string>
    <string name="pnc_registration">PNC Registration</string>
    <string name="ld_registration">L&amp;D Registration</string>
    <string name="hivst_registration">HIVST Registration</string>
    <string name="sbc_registration">SBC Registration</string>
    <string name="kvp_registration">KVP Screening</string>
    <string name="vmmc_registration">VMMC Enrollment</string>
    <string name="vmmc_registration_info">VMMC Registration Info</string>
    <string name="gbv_registration">GBV/VAC Registration</string>
    <string name="reproductive_cancer_preventive_services_registration">Reproductive Cancers Enrollment</string>
    <string name="hps_enrollment">iCCHW Services enrollment</string>
    <string name="enter_your_username_to_reset_password">Enter your username to reset password:</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="mother_mentor_household_enrollment">Enroll in Mama Kinara services</string>
    <string name="remove_member">Remove Household Member</string>
</resources>