<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_family_details"
        android:enabled="true"
        android:title="@string/family_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_hps_enrollment"
        android:enabled="true"
        android:title="@string/hps_enrollment"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mother_mentor_household_enrollment"
        android:enabled="true"
        android:visible="false"
        android:title="@string/mother_mentor_household_enrollment"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_member"
        android:enabled="true"
        android:title="@string/remove_member"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_head"
        android:enabled="true"
        android:title="@string/change_family_head"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_care_giver"
        android:enabled="true"
        android:title="@string/change_primary_caregiver"
        app:showAsAction="never" />

</menu>

