<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_registration"
        android:enabled="true"
        android:title="@string/registration_info"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/action_vmmc_registration"
        android:enabled="true"
        android:title="@string/vmmc_registration_info"
        app:showAsAction="never"
        android:visible="false"
        />
    <item android:id="@+id/action_location_info"
        android:enabled="true"
        android:title="@string/location_info"
        app:showAsAction="never"
        android:visible="false"
        />

    <item
        android:id="@+id/action_hps_enrollment"
        android:enabled="true"
        android:visible="false"
        android:title="@string/hps_enrollment"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_member"
        android:enabled="true"
        android:title="@string/mark_as_deceased"
        app:showAsAction="never" />

</menu>