<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CoreForgotPasswordActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_blue"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/back_to_nav_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_collapseMode="pin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rv_arrow">

                <org.smartregister.view.customcontrols.CustomFontTextView
                    android:id="@+id/toolbar_title"
                    style="@style/CustomFontTextViewStyle.ClientList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:text="@string/reset_password"
                    android:textColor="@color/colorWhite"
                    android:textSize="17sp" />
            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/login_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:text="@string/enter_your_username_to_reset_password"
        android:textColor="#272727"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="18dp"
        android:typeface="sans" />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:width="260dp"
        android:background="@drawable/rounded_corner_edittext"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/userNameEditText"
        android:inputType="textNoSuggestions|textFilter|textVisiblePassword"
        android:paddingStart="8dp"
        android:singleLine="true"
        android:textColor="#666666"
        android:textColorHint="#bfbfbf"
        android:textCursorDrawable="@null"
        android:typeface="sans" />

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_bg"
        android:ems="10"
        android:shadowColor="#ffffff"
        android:shadowDx="0"
        android:shadowDy="1"
        android:shadowRadius="0.5"
        android:text="@string/reset_password"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/back_to_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/back_to_login"
        android:textAlignment="center"
        android:textColor="@color/primary" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

</LinearLayout>